# Lake-Hill-Thunder

./: .gitmodules  README.md  index.html
.github/workflows/: pages.yml
cpp-port/: CMakeLists.txt  PORT_PROGRESS.md
cpp-port/src/audio/: audio_engine.cpp  audio_engine.h  dsp.cpp  dsp.h  mixer.cpp  mixer.h
cpp-port/src/platform/: main.cpp  tilt_input.cpp  tilt_input.h
cpp-port/src/render/: atlas_texture.cpp  atlas_texture.h  car_rig_data.h  color.h  digit_mesh.cpp  digit_mesh.h  env_presets.h  fmt_time.cpp  fmt_time.h  gap_time.cpp  gap_time.h  gear_rpm.cpp  gear_rpm.h  hill_silhouette.cpp  hill_silhouette.h  hud.cpp  hud.h  leaderboard.cpp  leaderboard.h  livery.cpp  livery.h  mesh_import.cpp  mesh_import.h  minimap.cpp  minimap.h  pylon_mesh.cpp  pylon_mesh.h  renderer.cpp  renderer.h  shaders_embedded.h  skinned_mesh.cpp  skinned_mesh.h  sky_texture.cpp  sky_texture.h  stadium_mesh.cpp  stadium_mesh.h  status_bars.cpp  status_bars.h  texture_import.cpp  texture_import.h  (+11 more)
cpp-port/src/render/shaders/: fs_bloom_blur.sc  fs_bloom_bright.sc  fs_flat.sc  fs_grade_tonemap.sc  fs_lit.sc  fs_sky.sc  fs_textured_lit.sc  varying_lit.def.sc  varying_skinned.def.sc  varying_textured_lit.def.sc  vs_flat.sc  vs_lit.sc  vs_skinned.sc  vs_sky.sc  vs_textured_lit.sc
cpp-port/src/sim/: car.cpp  car.h  constants.h  race.cpp  race.h  race_state.h  rng.h  step_car.cpp  step_car.h  track.cpp  track.h  tracks_data.h
cpp-port/src/ui/: menu.cpp  menu.h  orientation.h  results.cpp  results.h  touch_controls.cpp  touch_controls.h
cpp-port/tests/: atlas_texture_test.cpp  car_test.cpp  determinism_check.cpp  determinism_pace_check.cpp  determinism_test.cpp  digit_mesh_test.cpp  dsp_test.cpp  env_presets_test.cpp  fmt_time_test.cpp  gear_rpm_test.cpp  hill_silhouette_test.cpp  leaderboard_test.cpp  livery_test.cpp  menu_test.cpp  mesh_import_test.cpp  minimap_test.cpp  mixer_test.cpp  pylon_mesh_test.cpp  race_sim_test.cpp  results_test.cpp  rng_test.cpp  sky_texture_test.cpp  speed_model_test.cpp  spotter_test.cpp  stadium_mesh_test.cpp  test_driver_brain.h  tire_model_test.cpp  touch_controls_test.cpp  track_surface_test.cpp  track_test.cpp  ui_draw_test.cpp  wasm_verify.js  wheel_animation_test.cpp
cpp-port/tests/determinism/: dump_js_trace.js  trace.cpp  trace.h
cpp-port/tests/fixtures/: skinned_wheel_test.gltf  trace_synthetic.txt
cpp-port/tools/: gen_car_rig.py
cpp-port/web/: generate_icons.py  manifest.json  shell.html  sw.js
tools/: playtest.js  wreck_stats.js
